optable-targeting: Code cleanup